# chatgpt-team

./: .coverage  .dev.vars  .env.example.env  .gitattributes  .gitignore  .gitleaks.toml  .tree.txt  AGENTS.md  API Reference - OpenAI API.pdf:Zone.Identifier  CONTRIBUTING.md  ChatGPT-API_reference_ground_truth-2025-10-29.json  New Text Document.txt  OPENAI_REFERENCES.md  OpenAI_Models_CSV_Summary.csv  P4_Cross_Domain_Analogy_Hybrid_Developer_v2.json  P4_Cross_Domain_Analogy_Hybrid_Developer_v2_3_3.json  P4_Cross_Domain_Analogy_Hybrid_Developer_v2_3_3.json:Zone.Identifier  README.md  RELAY_CHECKLIST_v10.md  RELAY_CHECKLIST_v11.md  RELAY_CHECKLIST_v14.md  RELAY_CHECKLIST_v15.md  RELAY_CHECKLIST_v16.md  RELAY_CHECKLIST_v16.md:Zone.Identifier  RELAY_CHECKLIST_v17.md  RELAY_CHECKLIST_v19.md  RELAY_CHECKLIST_v7.md  RELAY_CHECKLIST_v7.md:Zone.Identifier  RELAY_PROGRESS_SUMMARY_v11.md  RELAY_PROGRESS_SUMMARY_v12.md  RELAY_PROGRESS_SUMMARY_v12.md:Zone.Identifier  RELAY_PROGRESS_SUMMARY_v13.md  RELAY_PROGRESS_SUMMARY_v14.md  RELAY_PROGRESS_SUMMARY_v3.md  RELAY_PROGRESS_SUMMARY_v3.md:Zone.Identifier  RELAY_PROGRESS_SUMMARY_v6.md  RELAY_PROGRESS_SUMMARY_v7.md  _worker.ts  all_tools.json  bifl_test.py  (+93 more)
.github/workflows/: .gitleaks.toml  .tree.txt  ci-verify-and-deploy.yml  ci.yml  deploy-realtime.yml  deploy.yml  relay-smoke.yml  relay-verify.yml  secret-scan.yml  sync-models.yml  verify-flow.yml
.well-known/: ai-plugin.json
.wrangler/tmp/: .tree.txt
06_Runbooks/: workspace_upgrade_runbook.md
06_Runbooks/follow-ons/: index_exclusion_amendment.md  pull_openai_docs.ps1  retrieval_eval_checklist.md
Tools/: test-relay.ps1
app/: client.py  http_client.py  main.py
app/.well-known/: ai-plugin.json
app/api/: forward.py  forward_openai.py  passthrough_proxy.py  responses.py  responses_api.py  routes.py  sse.py  tools_api.py
app/core/: config.py  http_client.py  logging.py  settings.py
app/manifests/: __init__.py  tools_manifest.json
app/middleware/: p4_orchestrator.py  relay_auth.py  validation.py
app/models/: __init__.py  error.py
app/routes/: __init__.py  actions.py  assistants.py  attachments.py  audio.py  batch.py  batches.py  bifl.py  chat.py  chatkit.py  completions.py  containers.py  conversations.py  core.py  embeddings.py  files.py  health.py  images.py  jobs.py  models.py  moderations.py  openapi.py  openapi_yaml.py  proxy.py  proxy.py:Zone.Identifier  realtime.py  register_routes.py  relay_status.py  responses.py  threads.py  tiktoken.py  tools.py  uploads.py  usage.py  vector_stores.py  videos.py
app/tools/: audio_gen.py  audio_transcribe.py  code_interpreter.py  computer_use.py  computer_use_preview.py  echo_tool.py  embedding_tool.py  file_download.py  file_search.py  file_upload.py  image_gen.py  image_generation.py  math_solver.py  moderation.py  realtime.py  retrieval_tool.py  speech.py  system_tool.py  tools_manifest.json  url_scraper.py  vector_store_retrieval.py  video_gen.py  video_generation.py  video_remix.py  video_status.py  web_search.py  web_search_preview.py
app/utils/: authy.py  cloudflare.py  db_logger.py  error_handler.py  forward.py  http_client.py  logger.py
config/: tools.json
data/: conversations.csv  conversations.db
data/conversations/: conversations.db
docs/: openai_workspace_priority_links.md
downloads/: .tree.txt
functions/: .tree.txt  health.ts
lib/: filesHelper.ts  httpClient.ts
logs/: smoke_all_20251120-182701.json  smoke_routes_local_20251120-192805.json
pc-optimization/: Optimize-VirelaiPC.ps1  README.md  Restore-RXUltimate.ps1  Setup-VirelaiAutomation.ps1  Unhide-And-DumpProc.ps1
samples files/: download_3ed43beee8ef-964d455c0985.json  sample.csv  sample.txt
schemas/: openapi.yaml
scripts/: README.md  batch_download_test.sh  chain_wait_routes_test.sh  check_relay_health.py  content_endpoints_smoke.sh  coverage_report.sh  coverage_report.sh:Zone.Identifier  eval_p4_specs.py  images_variations_smoke.sh  make_sample_png.py  make_test_png.py  openapi_operationid_check.sh  regenerate-sdk.ps1  smoke_all_local.py  smoke_images_variations.sh  smoke_routes_local.py  sse_smoke_test.sh  test-assistants.ps1  test-files.ps1  test-responses.ps1  test-sdk.ts  test-suite.http  test-upload.http  test_31_endpoints.sh  test_local.sh  test_render.sh  test_success_gates_integration.sh  ts-files.ps1  uploads_e2e_test.sh  verify-all.ps1  verify-relay.ps1
tests/: client.py  conftest.py  relay_client_example.py  sample.json  test_actions_and_orchestrator.py  test_beta_header_forwarding.py  test_embeddings_images_videos.py  test_extended_routes_smoke_integration.py  test_files_and_batches_integration.py  test_files_and_vectorstores.py  test_health_and_tools.py  test_images_and_videos_routes_extra.py  test_images_variations_integration.py  test_local_e2e.py  test_models_files_vectorstores_sdk.py  test_models_files_videos_extra_routes.py  test_realtime_and_infra.py  test_realtime_ws_integration.py  test_realtime_ws_local.py  test_relay_auth_guard.py  test_relay_auth_middleware.py  test_relay_e2e.py  test_remaining_routes_smoke_integration.py  test_responses_and_conversations.py  test_responses_and_embeddings_sdk.py  test_responses_stream_http.py  test_routes_forwarding_smoke.py  test_sse_stream_open.py  test_success_gates_integration.py  test_tools_and_actions_routes.py  test_validation_middleware.py  test_videos_actions_integration.py  test_videos_realtime_tools_agentic.py  teststest_realtime_ws_integration.py
tools/: .tree.txt  foreign,mp3  france.txt  hello.txt  latency-compare.ps1  openai-node-diff.ps1  relay-smoke.ps1  run_checks.ps1  smoke-all.ps1  smoke.sh  tmp.txt  tts.mp3.curl  v2runtest.ps1  verify.ps1  wss-assistants-v2.ps1
worker/: .gitignore  .tree.txt  _worker.ts  _worker.ts.bak  package-lock.json  package.json  test_realtime.js  wrangler.toml  wrangler.toml.bak  wrangler.toml.bak-20250916075143
(+219 files in other folders)
