[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-team-relay"
version = "0.1.0"
description = "OpenAI-compatible relay server for ChatGPT Team (FastAPI + OpenAI Python SDK)."
readme = "docs/README.md"
requires-python = ">=3.12"

# Runtime dependencies for the relay application.
dependencies = [
  # Web framework and ASGI server
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",

  # HTTP client
  "httpx>=0.27,<1.0",

  # OpenAI Python SDK (v2.x as per your environment spec)
  "openai>=2.10.0,<2.11.0",

  # Configuration & settings
  "python-dotenv>=1.0,<2.0",
  "pydantic>=2.5,<3.0",
  "pydantic-settings>=2.2,<3.0",

  # File uploads / multipart
  # NOTE: patched range for GHSA-59g5-xgcq-4qw3 / CVE in python-multipart
  "python-multipart>=0.0.18,<0.1.0",

  # Streaming via Server-Sent Events
  "sse-starlette>=2.1,<3.0",

  # Serialization, logging, and config formats
  "orjson>=3.9,<4.0",
  "pyyaml>=6.0,<7.0",
  "loguru>=0.7,<1.0",
]

[project.optional-dependencies]
# Development & test dependencies:
# Install with: pip install -e .[dev]
dev = [
  # Test runner + async tests
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.23,<1.0",

  # Env/dotenv integration
  "pytest-env>=1.1,<2.0",
  "pytest-dotenv>=0.5,<1.0",

  # HTTP/requests mocking
  "pytest-httpx>=0.30,<1.0",
  "pytest-mock>=3.14,<4.0",
  "requests>=2.32,<3.0",
  "requests-mock>=1.12,<2.0",

  # Explicit anyio (often imported directly in async tests)
  "anyio>=4.4,<5.0",
]

[project.urls]
homepage = "https://github.com/virelai2604/chatgpt-team"
repository = "https://github.com/virelai2604/chatgpt-team"
issues = "https://github.com/virelai2604/chatgpt-team/issues"

# -----------------------------
# Setuptools explicit packages
# -----------------------------
# Without this, setuptools' flat-layout auto-discovery finds multiple
# top-level packages (app, data, static, schemas) and errors out:
# "Multiple top-level packages discovered in a flat-layout".
# By explicitly listing 'app' here, we turn off auto-discovery and
# tell setuptools exactly which package to build. :contentReference[oaicite:3]{index=3}
[tool.setuptools]
packages = ["app"]
